@@ -1,8 +1,12 @@
-2025-05-20  Charlie Zender  <zender@uci.edu>
+2025-05-21  Charlie Zender  <zender@uci.edu>
 
 	* NCO 5.3.4-alpha04 release procedure:
 	cd ~/nco;git commit -a -m 'Version 5.3.4-alpha04: Yellowjackets';git push
 	git tag -a 5.3.4-alpha04 -m '';git push --tags
+
+	* Complete and test new S1D lut_out=789 option for all urban types
+
+2025-05-20  Charlie Zender  <zender@uci.edu>
 
 	* Create new S1D lut_out=789 option for all urban types (preliminary feature works)
 
